--- a/public/css/web/base.css
+++ b/public/css/web/base.css
@@ -77,11 +77,11 @@ opacity:1
 /*search*/
 .searchbox { background: #fff; float:right; width: 280px; height: 36px;}
 .searchbox .input { float:left; border: none; outline: none; height: 36px; line-height: 36px; z-index: 10; font-size: 16px; color: #333; width: 240px; padding-left: 10px;  }
-.searchbox .search_ico { float:right; z-index: 90;  border: none; outline: none; width:30px; height: 36px; display: block;  background:url(../images/searchbg.png) center no-repeat}
+.searchbox .search_ico { float:right; z-index: 90;  border: none; outline: none; width:30px; height: 36px; display: block;  background:url(/images/searchbg.png) center no-repeat}
  
 
 /*logo*/
-.logo { float: left; font-size: 22px; line-height: 73px; background:url(../images/logo.jpg) left center no-repeat ; padding-left:60px}
+.logo { float: left; font-size: 22px; line-height: 73px; background:url(/images/php.jpg) left center no-repeat ; padding-left:60px}
 /*nav*/
 nav { width: 1120px; margin: auto; }
 #mnavh { display: none; width: 30px; height: 40px; text-align: center; padding: 0 5px }
