--- a/public/web/css/base.css
+++ b/public/web/css/base.css
@@ -81,10 +81,9 @@ opacity:1
 .login_button{ background: #fff; float:right; width: 250px; height: 36px; }
 .searchbox .input {background:#f7f8fa; float:left; border: none; outline: none; height: 36px; line-height: 36px; z-index: 10; font-size: 16px; color: #333; width: 240px; padding-left: 10px;  }
 .searchbox .search_ico { float:right; z-index: 90;  border: none; outline: none; width:30px; height: 36px; display: block;  background:url(/web/images/searchbg.png) center no-repeat}
- 
 
 /*logo*/
-.logo { float: left; font-size: 22px; line-height: 73px; background:url(/images/php.jpg) left center no-repeat ; padding-left:60px}
+.logo { float: left; font-size: 22px; line-height: 73px; background:url(/web/images/php.jpg) left center no-repeat ; padding-left:60px}
 /*nav*/
 nav { width: 1120px; margin: auto; }
 #mnavh { display: none; width: 30px; height: 40px; text-align: center; padding: 0 5px }
