--- a/public/web/css/reg.css
+++ b/public/web/css/reg.css
@@ -1,3 +1,4 @@
+
 .reg_main{
     width: 1060px;height: 530px;margin: 0 auto;border: 0px solid #ddd;margin-top: 20px;
 }
@@ -14,6 +15,9 @@
 .reg_main .reg_box .main_left .item_box{width:320px;height:40px;border-bottom:0px dashed #ddd;line-height:1.5;padding-top:15px;}
 .reg_main .reg_box .main_left .item_box_bux{width:320px;height:40px;border-bottom:0px dashed #ddd;line-height:1.5;padding-top:70px;padding-left: 80px;}
 .reg_main .reg_box .main_left .item_box .type{width:80px;height:30px;float:left;text-align:right;font-size: 16px;}
+.reg_main .reg_box .main_left .item_code .code{width:100px;height:30px;float:left;text-align:right;font-size: 16px;}
+.reg_main .reg_box .main_left .item_code{width:350px;height:40px;border-bottom:0px dashed #ddd;line-height:1.5;padding-top:95px;}
+
 .reg_main .reg_box .main_left .item_box .type_bux{width:80px;height:30px;float:left;text-align:right;font-size: 16px;}
 .reg_main .reg_box .main_left .item_box .value{width:220px;height:30px;float:right;}
 .reg_main .reg_box .main_left .item_box .value_bux{width:220px;height:30px;float:right;}
@@ -21,6 +25,9 @@
 .reg_main .reg_box .main_left .item_box .btn{width:50px;height:30px;border:1px solid #ddd;padding-left:5px;font-size:14px;}
 
 .reg_main .reg_box .main_left .item_box .txt{width:220px;height:30px;border:1px solid #ddd;padding-left:5px;font-size:14px;}
+.reg_main .reg_box .main_left .item_code .txt{width:200px;height:30px;border:1px solid #ddd;padding-left:5px;font-size:14px;}
+.reg_main .reg_box .main_left .item_code .value{width:220px;height:30px;float:right;}
+
 .reg_main .reg_box .main_left .item_box .code{width:110px;height:30px;border:1px solid #ddd;padding-left:5px;}
 .reg_main .reg_box .main_left .item_box_bux .bt{width: 220px;height: 30px;background: #ff6450;color: #fff;border: 0;line-height: 30px;}
 
@@ -28,3 +35,7 @@
 .reg_main .reg_box .main_right .box{width:380px;height:80px;margin:0 auto;margin-top:20px;border:0px solid #eee;padding:10px;font-size:12pt;font-family:寰蒋闆呴粦;color:#666;}
 
 .reg_main .reg_box .main_right .box a{font-size:12pt;font-family:寰蒋闆呴粦;color:#ff6450;}
+
+.reg_main .reg_box .main_left .item_box_bux_zy{width:320px;height:60px;border-bottom:0px dashed #ddd;line-height:1.5;padding-top:30px;padding-left: 50px;}
+.reg_main .reg_box .main_left .item_box_bux_zy .type_bux_yz{width:80px;height:30px;float:left;text-align:right;font-size: 16px;}
+.reg_main .reg_box .main_left .item_box_bux_zy .bts{width: 120px;height: 45px;background: #ff6450;color: #fff;border: 0;line-height: 30px;font-size: 16px; cursor: pointer;}
