--- a/public/web/css/login.css
+++ b/public/web/css/login.css
@@ -12,12 +12,20 @@
 .reg_main .reg_box .main_right{width:430px;height:300px; border-left:1px solid #ddd;margin-top:50px;float:right;margin-right:20px;padding-left: 30px;}
 
 .reg_main .reg_box .main_left .item_box{width:340px;height:40px;border-bottom:0px dashed #ddd;line-height:1.5;padding-top:15px;}
-.reg_main .reg_box .main_left .item_box .type{width:100px;height:30px;float:left;text-align:right;font-size: 16px;}
 .reg_main .reg_box .main_left .item_box .value{width:220px;height:30px;float:right;}
 .reg_main .reg_box .main_left .item_box .txt{width:220px;height:30px;border:1px solid #ddd;padding-left:5px;font-size:14px;}
 .reg_main .reg_box .main_left .item_box .code{width:120px;height:30px;border:1px solid #ddd;padding-left:5px;}
-.reg_main .reg_box .main_left .item_box .bt{width: 100px;height: 30px;background: #ff6450;color: #fff;border: 0;line-height: 30px;}
+.reg_main .reg_box .main_left .item_box .bt{width: 100px;height: 40px;background: #ff6450;color: #fff;border: 0;line-height: 30px;}
 
 .reg_main .reg_box .main_right .tips{width:380px;height:80px;margin:0 auto;margin-top:20px;border:0px solid #eee;padding:10px;font-size:15pt;font-family:微软雅黑;color:#666;}
 .reg_main .reg_box .main_right .box{width:380px;height:80px;margin:0 auto;margin-top:20px;border:0px solid #eee;padding:10px;font-size:12pt;font-family:微软雅黑;color:#666;}
 .reg_main .reg_box .main_right .box a{font-size:12pt;font-family:微软雅黑;color:#ff6450;}
+
+.reg_main .reg_box .main_left .submit{width:340px;height:50px;border-bottom:0px dashed #ddd;line-height:1.5;padding-top:65px;}
+.reg_main .reg_box .main_left .submit .type{width:100px;height:30px;text-align:right;font-size: 16px;}
+.reg_main .reg_box .main_left .submit .txt{width:220px;height:30px;border:1px solid #ddd;padding-left:5px;font-size:14px;}
+.reg_main .reg_box .main_left .submit .code{width:120px;height:30px;border:1px solid #ddd;padding-left:5px;}
+.reg_main .reg_box .main_left .submit .bt{width: 100px;height: 40px;background: #ff6450;color: #fff;border: 0;line-height: 30px;}
+
+
+
